--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
 ]}.
 {deps, [
   {eunit_formatters, ".*", {git, "git://github.com/seancribbs/eunit_formatters", "master"}},
-  {edown, ".*", {git, "https://github.com/uwiger/edown", "master"}}
+  {edown, ".*", {git, "https://github.com/uwiger/edown", "master"}},
+  {eutils, ".*", {git, "https://github.com/emedia-project/eutils", "master"}}
 ]}.
 {eunit_opts, [
   no_tty,  %% This turns off the default output, MUST HAVE
