--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,2 @@
-{deps, [{bucs,".*",{git,"https://github.com/botsunit/bucs.git","master"}}]}.
+{deps, [{bucs,".*",{git,"https://github.com/botsunit/bucs.git",{branch,"master"}}}]}.
 {erl_opts, [debug_info,warn_export_vars,warn_shadow_vars,warn_obsolete_guard]}.
