--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {elixir_bindings, [ostemp, tempdir, tempfile]}.
 
 {deps, [
-  {bucs, {git, "https://github.com/botsunit/bucs.git", {branch, "master"}}}
+  {bucs, {git, "https://github.com/botsunit/bucs.git", {tag, "0.0.2"}}}
  ]}.
 
 {eunit_opts, [
