--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,8 @@
 {elixir_bindings, [ostemp, tempdir, tempfile]}.
 
 {deps, [
-  {bucs, {git, "https://github.com/botsunit/bucs.git", {tag, "0.0.2"}}}
- ]}.
+        {bucs, "~> 0.1.0"}
+       ]}.
 
 {eunit_opts, [
               verbose, {report, {eunit_surefire, [{dir, "test/eunit"}]}}
