--- a/rebar.config
+++ b/rebar.config
@@ -1,15 +1,15 @@
 {erl_opts, [debug_info, warn_export_vars, warn_shadow_vars, warn_obsolete_guard]}.
 
 {plugins, [
-           rebar3_elixir,
+           {rebar3_elixir, "~> 0.0.9"},
            rebar3_hex,
-           {rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.6"}}}
+           rebar3_lint
           ]}.
 
 {elixir_bindings, [ostemp, tempdir, tempfile]}.
 
 {deps, [
-        {bucs, "~> 0.1.9"}
+        {bucs, "~> 1.0.0"}
        ]}.
 
 {eunit_opts, [
@@ -21,35 +21,35 @@
             {test, [
                     {deps, [meck]}
                    ]},
-            {doc, [
-                   {deps, [
-                           {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
-                          ]},
-                   {edoc_opts, [
-                                {doclet, edown_doclet}
-                                , {app_default, "http://www.erlang.org/doc/man"}
-                                , {source_path, ["src"]}
-                                , {overview, "overview.edoc"}
-                                , {stylesheet, ""}
-                                , {image, ""}
-                                , {top_level_readme, {"./README.md", "https://github.com/botsunit/tempfile"}}
-                               ]}
+            {docs, [
+                    {deps, [
+                            {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
+                           ]},
+                    {edoc_opts, [
+                                 {doclet, edown_doclet}
+                                 , {app_default, "http://www.erlang.org/doc/man"}
+                                 , {source_path, ["src"]}
+                                 , {overview, "overview.edoc"}
+                                 , {stylesheet, ""}
+                                 , {image, ""}
+                                 , {top_level_readme, {"./README.md", "https://github.com/botsunit/tempfile"}}
+                                ]}
                    ]}
            ]}.
 
 {elvis,
-   [#{dirs => ["src", "test"],
-      filter => "*.erl",
-      rules => [{elvis_style, line_length, #{limit => 180}},
-                {elvis_style, no_tabs},
-                {elvis_style, no_trailing_whitespace},
-                {elvis_style, macro_names},
-                {elvis_style, macro_module_names},
-                {elvis_style, dont_repeat_yourself, #{min_complexity => 25}},
-                {elvis_style, operator_spaces, #{rules => [{right, ","},
-                                                           {right, "++"},
-                                                           {left, "++"}]}}]},
-    #{dirs => ["."],
-      filter => "rebar.config",
-      rules => [{elvis_project, no_deps_master_rebar, []}]}]}.
+ [#{dirs => ["src", "test"],
+    filter => "*.erl",
+    rules => [{elvis_style, line_length, #{limit => 180}},
+              {elvis_style, no_tabs},
+              {elvis_style, no_trailing_whitespace},
+              {elvis_style, macro_names},
+              {elvis_style, macro_module_names},
+              {elvis_style, dont_repeat_yourself, #{min_complexity => 25}},
+              {elvis_style, operator_spaces, #{rules => [{right, ","},
+                                                         {right, "++"},
+                                                         {left, "++"}]}}]},
+  #{dirs => ["."],
+    filter => "rebar.config",
+    rules => [{elvis_project, no_deps_master_rebar, []}]}]}.
 
