Update Elixir bindings

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,10 @@
            rebar3_lint
           ]}.
 
-{elixir_bindings, [ostemp, tempdir, tempfile]}.
+{elixir_bindings, [{ostemp, [{as, 'OSTemp'}]},
+                   {tempdir, [{as, 'TempDir'}]},
+                   {tempfile, [{as, 'TempFile'}]}]}.
+{elixir_bindings_prefix, ephemeral}.
 
 {deps, [
         {bucs, "~> 1.0.1"}
