Update rebar and doc

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info, warn_export_vars, warn_shadow_vars, warn_obsolete_guard]}.
 
 {plugins, [
-           {rebar3_elixir, "~> 0.1.2"},
+           {rebar3_elixir, "~> 0.2.1"},
            rebar3_hex,
            rebar3_lint
           ]}.
@@ -12,7 +12,7 @@
 {elixir_bindings_prefix, ephemeral}.
 
 {deps, [
-        {bucs, "~> 1.0.6"}
+        {bucs, "~> 1.0.11"}
        ]}.
 
 {eunit_opts, [
@@ -26,7 +26,7 @@
                    ]},
             {docs, [
                     {deps, [
-                            {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
+                            {edown, {git, "https://github.com/uwiger/edown.git", {branch, "master"}}}
                            ]},
                     {edoc_opts, [
                                  {doclet, edown_doclet}
@@ -35,7 +35,7 @@
                                  , {overview, "overview.edoc"}
                                  , {stylesheet, ""}
                                  , {image, ""}
-                                 , {top_level_readme, {"./README.md", "https://github.com/botsunit/tempfile"}}
+                                 , {top_level_readme, {"./README.md", "https://github.com/G-Corp/ephemeral"}}
                                 ]}
                    ]}
            ]}.
