--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info, warn_export_vars, warn_shadow_vars, warn_obsolete_guard]}.
 
 {plugins, [
-           {rebar3_elixir, "~> 0.2.1"},
+           {rebar3_elixir, "~> 0.2.3"},
            rebar3_hex,
            rebar3_lint
           ]}.
@@ -12,17 +12,18 @@
 {elixir_bindings_prefix, ephemeral}.
 
 {deps, [
-        {bucs, "~> 1.0.12"}
+        % {bucs, "~> 1.0.12"}
+        {bucs, {git, "git://github.com/G-Corp/bucs.git", {branch, "master"}}}
        ]}.
 
-{eunit_opts, [
-              verbose, {report, {eunit_surefire, [{dir, "test/eunit"}]}}
-             ]}.
-{pre_hooks, [{eunit, "mkdir -p test/eunit"}]}.
+{eunit_opts, [no_tty, {report, {unite_compact, [profile]}}]}.
 
 {profiles, [
             {test, [
-                    {deps, [meck]}
+                    {deps, [
+                            meck,
+                            {unite, "", {git, "git://github.com/basho/unite.git", {branch, "master"}}}
+                           ]}
                    ]},
             {docs, [
                     {deps, [
@@ -55,4 +56,3 @@
   #{dirs => ["."],
     filter => "rebar.config",
     rules => [{elvis_project, no_deps_master_rebar, []}]}]}.
-
